# CMake

./: CMakeLists.txt
include/: mytime.h
libs/A/include/A/: A.h  AA.h
libs/A/src/: A.cpp
libs/A/test/: ATests.cpp
src/: main.cpp  time.cpp
